--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Utils\CalMD5Value.cs" />
     <Compile Include="Utils\Constant.cs" />
     <Compile Include="Utils\FileUtils.cs" />
+    <Compile Include="Utils\StringHelper.cs" />
     <Compile Include="Utils\XiaosaTest.cs" />
     <EmbeddedResource Include="MyForm\NetworkForm.resx">
       <DependentUpon>NetworkForm.cs</DependentUpon>
