#MainFormInterface改名为MainFormBase；#提炼可操作的点击事件到MainFormBase类中；#整理三个MainForm类的所有方法；分放在9个不同的region块；-去掉NewToolsForm的皮肤相关代码；#stepPanel几个标签去掉Tag=9999的限制，可随皮肤变换字体颜色；#stepTime显示与实际的数据有区别，让步时间所见即所得（待完善）

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -281,7 +281,7 @@
     <Compile Include="MyForm\LightList\LightsForm.designer.cs">
       <DependentUpon>LightsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyForm\MainFormInterface.cs">
+    <Compile Include="MyForm\MainFormBase.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MyForm\MainFormAst\MaterialSaveForm.cs">
@@ -395,6 +395,9 @@
     <Compile Include="Utils\ICommunicatorCallBack.cs" />
     <Compile Include="Utils\IPreviewPrepareDataCallBack.cs" />
     <Compile Include="Utils\ISaveProjectCallBack.cs" />
+    <EmbeddedResource Include="MyForm\MainFormBase.resx">
+      <DependentUpon>MainFormBase.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm\NewMainForm.resx">
       <DependentUpon>NewMainForm.cs</DependentUpon>
     </EmbeddedResource>
