--- a/LightEditor/GlobalSet.ini
+++ b/LightEditor/GlobalSet.ini
@@ -1,12 +1,12 @@
 ﻿##注意，不要随意改动"[SkinSet]”的位置，如果放在第一行,可能设置就不会生效
 [SkinSet]
-skin=
+skin=irisSkins\macos.ssk
 [Link]
 lightEditor=0
 [Show]
 testButton=true
 hardwareUpdateButton=true
-softwareName=JKC810
+softwareName=TRANS-JOY
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
