《灯控》#SKForm移动到GlobalSet文件夹中；-《GlobalSet》中去掉QD相关的所有内容；包括修改Global.ini文件；#修改GlobalSetForm、SKForm相关的StepTime实时显示的内容；包括DecimalPalces、鼠标滚动、ValueChanged、保存内容时的数据转换等内容。

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -257,10 +257,10 @@
     <Compile Include="MyForm\MainFormAst\ProjectRenameOrCopyForm.Designer.cs">
       <DependentUpon>ProjectRenameOrCopyForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyForm\MainFormAst\SKForm.cs">
+    <Compile Include="MyForm\GlobalSet\SKForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MyForm\MainFormAst\SKForm.Designer.cs">
+    <Compile Include="MyForm\GlobalSet\SKForm.Designer.cs">
       <DependentUpon>SKForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MyForm\LightList\LightsEditForm.cs">
@@ -434,7 +434,7 @@
     <EmbeddedResource Include="MyForm\MainFormAst\ProjectRenameOrCopyForm.resx">
       <DependentUpon>ProjectRenameOrCopyForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MyForm\MainFormAst\SKForm.resx">
+    <EmbeddedResource Include="MyForm\GlobalSet\SKForm.resx">
       <DependentUpon>SKForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\LightList\LightsEditForm.resx">
