--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -6,7 +6,7 @@ lightEditor=0
 [Show]
 testButton=false
 hardwareUpdateButton=true
-softwareName=JKC810
+softwareName=TRANS-JOY
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
