--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -47,10 +47,10 @@
   <ItemGroup>
     <Compile Include="Ast\IPAst.cs" />
     <Compile Include="Common\IPHelper.cs" />
-    <Compile Include="Entity\ArtDMX.cs" />
-    <Compile Include="Entity\Art_Net_Client.cs" />
+    <Compile Include="Utils\IArt_Net_Client.cs" />
+    <Compile Include="Utils\IMPL\Art_Net_Client.cs" />
     <Compile Include="Entity\ControlDevice.cs" />
-    <Compile Include="Entity\LEDControllerServer.cs" />
+    <Compile Include="Utils\IMPL\LEDControllerServer.cs" />
     <Compile Include="Entity\QueueCacheData.cs" />
     <Compile Include="Entity\SaveQueueCacheData.cs" />
     <Compile Include="Entity\VirtualControlInfo.cs" />
@@ -68,11 +68,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Art_Net_Manager.cs" />
-    <Compile Include="Utils\CalMD5Value.cs" />
+    <Compile Include="Utils\ILEDControllerServer.cs" />
+    <Compile Include="Utils\IMPL\Art_Net_Manager.cs" />
+    <Compile Include="Utils\IMPL\CalMD5Value.cs" />
     <Compile Include="Utils\Constant.cs" />
-    <Compile Include="Utils\DataQueue.cs" />
-    <Compile Include="Utils\FileUtils.cs" />
+    <Compile Include="Utils\IMPL\DataQueue.cs" />
+    <Compile Include="Utils\IMPL\FileUtils.cs" />
+    <Compile Include="Utils\IArt_Net_Manager.cs" />
+    <Compile Include="Utils\IDataQueue.cs" />
+    <Compile Include="Utils\IFileUtils.cs" />
     <Compile Include="Utils\StringHelper.cs" />
     <Compile Include="Utils\XiaosaTest.cs" />
     <EmbeddedResource Include="MyForm\MainForm.resx">
@@ -105,5 +109,6 @@
   <ItemGroup>
     <None Include="Resources\刷新2.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
