--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -185,6 +185,32 @@
     <Compile Include="Entity\DB_FineTune.cs" />
     <Compile Include="Entity\CCEntity.cs" />
     <Compile Include="Entity\KeyEntity.cs" />
+    <Compile Include="MyForm\LightEditor\Ast\SA.cs" />
+    <Compile Include="MyForm\LightEditor\Ast\SAWrapper.cs" />
+    <Compile Include="MyForm\LightEditor\Ast\TongdaoWrapper.cs" />
+    <Compile Include="MyForm\LightEditor\Common\FileAst.cs" />
+    <Compile Include="MyForm\LightEditor\Common\IniFileAst.cs" />
+    <Compile Include="MyForm\LightEditor\Common\MathAst.cs" />
+    <Compile Include="MyForm\LightEditor\Common\TextAst.cs" />
+    <Compile Include="MyForm\LightEditor\LightEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\LightEditor\LightEditorForm.designer.cs">
+      <DependentUpon>LightEditorForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MyForm\LightEditor\SAForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\LightEditor\SAForm.Designer.cs">
+      <DependentUpon>SAForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MyForm\LightEditor\Tools\OneLightOneStep.cs" />
+    <Compile Include="MyForm\LightEditor\WaySetForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\LightEditor\WaySetForm.Designer.cs">
+      <DependentUpon>WaySetForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\NewMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -395,6 +421,15 @@
     <Compile Include="Utils\ICommunicatorCallBack.cs" />
     <Compile Include="Utils\IPreviewPrepareDataCallBack.cs" />
     <Compile Include="Utils\ISaveProjectCallBack.cs" />
+    <EmbeddedResource Include="MyForm\LightEditor\LightEditorForm.resx">
+      <DependentUpon>LightEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\LightEditor\SAForm.resx">
+      <DependentUpon>SAForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\LightEditor\WaySetForm.resx">
+      <DependentUpon>WaySetForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MainFormBase.resx">
       <DependentUpon>MainFormBase.cs</DependentUpon>
     </EmbeddedResource>
@@ -829,6 +864,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
+    <None Include="PreTDNameList">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Properties\app.manifest">
       <SubType>Designer</SubType>
     </None>
