#将FrameList.txt和GlobalSet.ini都设成utf-8(原来是utf-8 bom); #相应的，修改software名的获取，用IniFileAst_UTF8，避免中文乱码；-删除多余的LightEditor的Common文件夹的四个辅助类；+增加了好几个SA文件的相应方法；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -1,10 +1,10 @@
-﻿##注意，不要随意改动"[SkinSet]”的位置，如果放在第一行,可能设置就不会生效
+##注意，不要改动"[SkinSet]”的位置，如果放在第一行,设置将不会生效
 [SkinSet]
 skin=
 [Link]
 lightEditor=0
 [Show]
-useSkin=
+useSkin=true
 testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
