--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -4,8 +4,8 @@ skin=
 [Link]
 lightEditor=0
 [Show]
-useSkin=true
-testButton=true
+useSkin=false
+testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 [SavePath]
