--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -48,14 +48,14 @@
   <ItemGroup>
     <Compile Include="Ast\IPAst.cs" />
     <Compile Include="Common\IPHelper.cs" />
-    <Compile Include="Utils\IArt_Net_Client.cs" />
-    <Compile Include="Utils\ICalMD5Value.cs" />
-    <Compile Include="Utils\IMPL\Art_Net_Client.cs" />
-    <Compile Include="Entity\ControlDevice.cs" />
-    <Compile Include="Utils\IMPL\LEDControllerServer.cs" />
-    <Compile Include="Entity\QueueCacheData.cs" />
-    <Compile Include="Entity\SaveQueueCacheData.cs" />
-    <Compile Include="Entity\VirtualControlInfo.cs" />
+    <Compile Include="utils\IArt_Net_Client.cs" />
+    <Compile Include="utils\ICalMD5Value.cs" />
+    <Compile Include="utils\impl\Art_Net_Client.cs" />
+    <Compile Include="entity\ControlDevice.cs" />
+    <Compile Include="utils\impl\LEDControllerServer.cs" />
+    <Compile Include="entity\QueueCacheData.cs" />
+    <Compile Include="entity\SaveQueueCacheData.cs" />
+    <Compile Include="entity\VirtualControlInfo.cs" />
     <Compile Include="MyForm\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,17 +70,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ILEDControllerServer.cs" />
-    <Compile Include="Utils\IMPL\Art_Net_Manager.cs" />
-    <Compile Include="Utils\IMPL\CalMD5Value.cs" />
-    <Compile Include="Utils\Constant.cs" />
-    <Compile Include="Utils\IMPL\DataQueue.cs" />
-    <Compile Include="Utils\IMPL\FileUtils.cs" />
-    <Compile Include="Utils\IArt_Net_Manager.cs" />
-    <Compile Include="Utils\IDataQueue.cs" />
-    <Compile Include="Utils\IFileUtils.cs" />
-    <Compile Include="Utils\StringHelper.cs" />
-    <Compile Include="Utils\XiaosaTest.cs" />
+    <Compile Include="utils\ILEDControllerServer.cs" />
+    <Compile Include="utils\impl\Art_Net_Manager.cs" />
+    <Compile Include="utils\impl\CalMD5Value.cs" />
+    <Compile Include="utils\Constant.cs" />
+    <Compile Include="utils\impl\DataQueue.cs" />
+    <Compile Include="utils\impl\FileUtils.cs" />
+    <Compile Include="utils\IArt_Net_Manager.cs" />
+    <Compile Include="utils\IDataQueue.cs" />
+    <Compile Include="utils\IFileUtils.cs" />
+    <Compile Include="utils\StringHelper.cs" />
+    <Compile Include="utils\XiaosaTest.cs" />
     <EmbeddedResource Include="MyForm\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
