#优化了《灯库Form》许多破旧代码；#初步做了只打开单场境的功能。

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,7 +5,7 @@ skin=
 lightEditor=0
 [Show]
 useSkin=false
-testButton=false
+testButton=true
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 [SavePath]
