《灯控》+调用场景加验证；#调用场景添加fla的判断，若为false，则generateFrameData，再进行调用。#SkinMainForm，frameComboBox_Changed事件完善；#新增MainFormInterface类

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Ast\Entity\DB_FineTune.cs" />
     <Compile Include="Ast\Entity\CCEntity.cs" />
     <Compile Include="Ast\Entity\KeyEntity.cs" />
+    <Compile Include="MyForm\MainFormInterface.cs" />
     <Compile Include="MyForm\LightEditor\Ast\SA.cs" />
     <Compile Include="MyForm\LightEditor\Ast\SAWrapper.cs" />
     <Compile Include="MyForm\LightEditor\Ast\TongdaoWrapper.cs" />
