《灯控》#抽象是否使用旧外设和旧灯库编辑；包括IniFileAst和GlobalSet.ini ; #关闭主界面及《退出应用》时，是否保存当前已打开的工程；#打开工程时提示及显示的优化：包括Notice及灯具加载后打开场景数据前显示灯具列表；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -2,10 +2,11 @@
 [SkinSet]
 skin=
 [Link]
-lightEditor=0
+lightEditor=true
+oldTools=true
 [Show]
-useSkin=false
-testButton=true
+useSkin=true
+testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 [SavePath]
