《灯控》#删除多余数据方法的雏形已写好；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -2,10 +2,10 @@
 [SkinSet]
 skin=
 [Link]
-lightEditor=true
-oldTools=true
+lightEditor=false
+oldTools=false
 [Show]
-useSkin=true
+useSkin=false
 testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
