《灯控》#基本完成清除冗余灯具数据的功能；#基本完成导出工程及更新工程时添加源工程的功能；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -6,7 +6,7 @@ lightEditor=false
 oldTools=false
 [Show]
 useSkin=false
-testButton=false
+testButton=true
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 [SavePath]
