--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,10 +5,13 @@ skin=
 lightEditor=false
 oldTools=false
 [Show]
+newMainForm=false
 useSkin=false
-testButton=true
-hardwareUpdateButton=true
+testButton=false
+hardwareUpdateButton=false
 softwareName=TRANS-JOY
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
+[System]
+maxStTimes=254
