--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,7 +5,7 @@ skin=
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=false
+newMainForm=true
 useSkin=false
 testButton=false
 hardwareUpdateButton=false
