--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -11,6 +11,21 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,10 +47,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>false</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CSkin">
-      <HintPath>..\LightController\Source\CSkin.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
@@ -58,10 +79,16 @@
     <Compile Include="MyForm\NewMainForm.Designer.cs">
       <DependentUpon>NewMainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyForm\TestForm.cs">
+    <Compile Include="MyForm\NewNetworkForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MyForm\TestForm.Designer.cs">
+    <Compile Include="MyForm\NewNetworkForm.Designer.cs">
+      <DependentUpon>NewNetworkForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MyForm\old\TestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\old\TestForm.Designer.cs">
       <DependentUpon>TestForm.cs</DependentUpon>
     </Compile>
     <Compile Include="utils\IArt_Net_Client.cs" />
@@ -72,16 +99,16 @@
     <Compile Include="entity\QueueCacheData.cs" />
     <Compile Include="entity\SaveQueueCacheData.cs" />
     <Compile Include="entity\VirtualControlInfo.cs" />
-    <Compile Include="MyForm\MainForm.cs">
+    <Compile Include="MyForm\old\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MyForm\MainForm.Designer.cs">
+    <Compile Include="MyForm\old\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyForm\NetworkForm.cs">
+    <Compile Include="MyForm\old\NetworkForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MyForm\NetworkForm.Designer.cs">
+    <Compile Include="MyForm\old\NetworkForm.Designer.cs">
       <DependentUpon>NetworkForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -98,16 +125,19 @@
     <Compile Include="utils\impl\LogTools.cs" />
     <Compile Include="utils\StringHelper.cs" />
     <Compile Include="utils\XiaosaTest.cs" />
-    <EmbeddedResource Include="MyForm\MainForm.resx">
+    <EmbeddedResource Include="MyForm\old\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MyForm\NetworkForm.resx">
+    <EmbeddedResource Include="MyForm\old\NetworkForm.resx">
       <DependentUpon>NetworkForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\NewMainForm.resx">
       <DependentUpon>NewMainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MyForm\TestForm.resx">
+    <EmbeddedResource Include="MyForm\NewNetworkForm.resx">
+      <DependentUpon>NewNetworkForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\old\TestForm.resx">
       <DependentUpon>TestForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -121,6 +151,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
+    <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -133,6 +164,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
