《灯控》+ZipAst添加压缩文件夹的方法；并改造导出工程流程（先在本地生成Source文件夹，再压缩到导出文件夹中）；+添加一个切换工作目录的按键（配置文件配置其可见性）；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -6,10 +6,11 @@ lightEditor=false
 oldTools=false
 [Show]
 newMainForm=true
-useSkin=false
+useSkin=true
 testButton=false
 hardwareUpdateButton=false
 softwareName=TRANS-JOY
+useExportProject=true
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
