《灯控》+升级工程加入Source.zip文件；-GenerateSource内去除SetNotice(会被外部用到)； #selectedLightName统一改null-》"";+NewMainForm添加维佳测试按钮

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,12 +5,12 @@ skin=
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=true
-useSkin=true
+newMainForm=false
+useSkin=false
 testButton=false
 hardwareUpdateButton=false
 softwareName=TRANS-JOY
-useExportProject=true
+useExportProject=false
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
