--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,9 +5,9 @@ skin=
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=false
+newMainForm=true
 useSkin=false
-testButton=false
+testButton=true
 hardwareUpdateButton=false
 softwareName=TRANS-JOY
 useExportProject=false
