《灯控》：#基本完成备注:①+数据库及实体类（映射）内添加一个Remark属性；②+LightRemarkForm；③MainForm添加EditLightRemark();④修改EditLightInfo()，加入LightRemarkLabel的显示；⑤BuildLightList内，修改相应的Remark的显示；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -6,8 +6,8 @@ lightEditor=false
 oldTools=false
 [Show]
 newMainForm=true
-useSkin=false
-testButton=true
+useSkin=true
+testButton=false
 hardwareUpdateButton=false
 softwareName=TRANS-JOY
 useExportProject=false
