--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -188,6 +188,12 @@
     <Compile Include="Ast\Entity\DB_FineTune.cs" />
     <Compile Include="Ast\Entity\CCEntity.cs" />
     <Compile Include="Ast\Entity\KeyEntity.cs" />
+    <Compile Include="MyForm\LightList\LightRemarkForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\LightList\LightRemarkForm.Designer.cs">
+      <DependentUpon>LightRemarkForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\MainFormInterface.cs" />
     <Compile Include="MyForm\LightEditor\Ast\SA.cs" />
     <Compile Include="MyForm\LightEditor\Ast\SAWrapper.cs" />
@@ -433,6 +439,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\LightEditor\WaySetForm.resx">
       <DependentUpon>WaySetForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\LightList\LightRemarkForm.resx">
+      <DependentUpon>LightRemarkForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MainFormBase.resx">
       <DependentUpon>MainFormBase.cs</DependentUpon>
