《幻彩》#监测IP是否可用抽象成一个静态方法：先ping，若ping不通则再发一遍arp广播获取mac，若非空，则说明可用。

--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -59,6 +59,9 @@
   <PropertyGroup>
     <ApplicationIcon>favicon-20191029044630870.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>MultiLedController.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
