《灯控》+修复打开工程时生成LightAst时用文本内SavePath的bug，这样无法切换为用户目录。

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -10,7 +10,7 @@ useSkin=true
 testButton=false
 hardwareUpdateButton=false
 softwareName=TRANS-JOY
-useExportProject=false
+useExportProject=true
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
