《灯控》+FileAst添加拷贝文件的方法：不存在文件夹生成，文件不存在则不拷贝；+基本完成导出单场景的方法（待校验）；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -7,7 +7,7 @@ oldTools=false
 [Show]
 newMainForm=true
 useSkin=true
-testButton=false
+testButton=true
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 useExportProject=true
