--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -158,25 +158,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ast\IPAst.cs" />
-    <Compile Include="Ast\InsertMethod.cs" />
-    <Compile Include="Ast\JustTest.cs" />
+    <Compile Include="Ast\Enum\InsertMethod.cs" />
     <Compile Include="Ast\LightWrapper.cs" />
     <Compile Include="Ast\MaterialAst.cs" />
     <Compile Include="Ast\MaterialIndexAst.cs" />
     <Compile Include="Common\DBGetter.cs" />
-    <Compile Include="Common\DirectoryAst.cs" />
-    <Compile Include="Common\IniFileAst.cs" />
-    <Compile Include="Common\IniFileAst_UTF8.cs" />
-    <Compile Include="Common\MathAst.cs" />
+    <Compile Include="Common\DirectoryHelper.cs" />
+    <Compile Include="Common\IniFileHelper.cs" />
+    <Compile Include="Common\IniFileHelper_UTF8.cs" />
+    <Compile Include="Common\MathHelper.cs" />
     <Compile Include="Common\SQLiteHelper.cs" />
     <Compile Include="Ast\DBWrapper.cs" />
     <Compile Include="Ast\LightAst.cs" />
     <Compile Include="Ast\LightStepWrapper.cs" />
     <Compile Include="Ast\StepWrapper.cs" />
-    <Compile Include="Common\FileAst.cs" />
+    <Compile Include="Common\FileHelper.cs" />
     <Compile Include="Common\StringHelper.cs" />
-    <Compile Include="Common\TextAst.cs" />
-    <Compile Include="Common\ZipAst.cs" />
+    <Compile Include="Common\TextHelper.cs" />
+    <Compile Include="Common\ZipHelper.cs" />
     <Compile Include="DAO\FineTuneDAO.cs" />
     <Compile Include="DAO\ValueDAO.cs" />
     <Compile Include="DAO\StepCountDAO.cs" />
