--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -7,7 +7,7 @@ oldTools=false
 [Show]
 newMainForm=true
 useSkin=true
-testButton=false
+testButton=true
 hardwareUpdateButton=false
 softwareName=TRANS-JOY
 useExportProject=true
