《幻彩》#将清空关联的代码，写在if语句之前，即无论开启或关闭模拟，都先清空关联；《灯控》#OpenProject内原ReBuildLightAst代码优化；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,9 +5,9 @@ skin=
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=true
+newMainForm=false
 useSkin=true
-testButton=true
+testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 useExportProject=true
