《灯控》+标题栏添加软件版本号（文件版本）；《幻彩》+标题栏添加版本号；-删除netcardIndex及controllerSelectedIndex两个属性；#优化refreshNetcardInfo等方法及时间的流程；#初步完成多线程测试IP是否可用的代码；待完成；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,7 +5,7 @@ skin=
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=true
+newMainForm=false
 useSkin=true
 testButton=false
 hardwareUpdateButton=true
