《灯控》#优化《工程更新》的流程及SetBusy()代码；#灯库文件缺失时的提醒的优化（stepCount和value表不匹配时采用value）；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -912,6 +912,9 @@
     <None Include="使用手册.pdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="更新日志\v2.3.8.512">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
@@ -1017,7 +1020,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Content Include="FTD2XX_NET.XML" />
-    <Content Include="ReadMe.txt" />
+    <None Include="更新日志\about" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
